clang/test/BSC/Negative/Method/Enum/enum_instance_function_undefined_enum/enum_instance_function_undefined_enum.cbs
// RUN: %clang_cc1 -verify %s

int enum E::to_int(enum E* this) { // expected-error {{variable has incomplete type 'enum E'}}
  return 0;
}

